@@ -1692,3 +1692,9 @@ a.frame
 ## test of fix of trivial warning PR#8252
 pairs(iris[1:4], oma=rep(3,4))
 ## warned in 2.2.0 only
+
+## str(<dendrogram>)
+dend <- as.dendrogram(hclust(dist(USArrests), "ave")) # "print()" method
+dend2 <- cut(dend, h=70)
+str(dend2$upper)
+## gave much too many spaces in 2.2.[01]
